[gd_scene load_steps=18 format=3 uid="uid://bfpg282qeb0rx"]

[ext_resource type="Script" uid="uid://dypql3u6krwys" path="res://source/editor/interfaces/world_decoration/interface_decoration_edit.gd" id="1_w5yw6"]
[ext_resource type="StyleBox" uid="uid://bmln1elnj0h8" path="res://resources/style_blueish.tres" id="2_ga3my"]
[ext_resource type="Texture2D" uid="uid://dlk4vjy5lgeuu" path="res://assets/icon.svg" id="3_kt1sj"]
[ext_resource type="PackedScene" uid="uid://cintikjibl1vr" path="res://source/utils/property_tree/nodes/item_void.tscn" id="4_04cbk"]
[ext_resource type="Script" uid="uid://dvo2mdraodovy" path="res://source/utils/property_tree/items/property_tree_item.gd" id="5_pnncu"]
[ext_resource type="Script" uid="uid://dmvvf6byo3wpw" path="res://source/utils/property_tree/items/item_bool.gd" id="6_nwv8g"]
[ext_resource type="Script" uid="uid://bhickbq71f38e" path="res://source/utils/property_tree/items/item_vector2.gd" id="7_cgriv"]
[ext_resource type="Script" uid="uid://d356ooxo4eq1k" path="res://source/utils/property_tree/items/item_float.gd" id="7_nwv8g"]
[ext_resource type="Script" uid="uid://b51eyg5h0a7ey" path="res://source/utils/property_tree/items/item_color.gd" id="8_cgriv"]

[sub_resource type="Resource" id="Resource_cgriv"]
script = ExtResource("5_pnncu")
text = "Texture: (TODO texture2d)"
child_items = Array[ExtResource("5_pnncu")]([])
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[sub_resource type="Resource" id="Resource_vljim"]
script = ExtResource("6_nwv8g")
value = false
child_items_on = Array[int]([])
child_items_off = Array[int]([])
text = "Horizontal flip:"
child_items = Array[ExtResource("5_pnncu")]([])
metadata/_custom_type_script = "uid://dmvvf6byo3wpw"

[sub_resource type="Resource" id="Resource_ui7qy"]
script = ExtResource("6_nwv8g")
value = false
child_items_on = Array[int]([])
child_items_off = Array[int]([])
text = "Vertical flip:"
child_items = Array[ExtResource("5_pnncu")]([])
metadata/_custom_type_script = "uid://dmvvf6byo3wpw"

[sub_resource type="Resource" id="Resource_owm2d"]
script = ExtResource("7_cgriv")
_value = Vector2(0, 0)
suffix = "px"
text = "Position:"
child_items = Array[ExtResource("5_pnncu")]([])
metadata/_custom_type_script = "uid://bhickbq71f38e"

[sub_resource type="Resource" id="Resource_j6prn"]
script = ExtResource("7_nwv8g")
value = 0.0
is_percentage = false
has_minimum = false
minimum = -180.0
has_maximum = false
maximum = 180.0
suffix = "Â°"
text = "Rotation:"
child_items = Array[ExtResource("5_pnncu")]([])
metadata/_custom_type_script = "uid://d356ooxo4eq1k"

[sub_resource type="Resource" id="Resource_e5qcx"]
script = ExtResource("7_cgriv")
_value = Vector2(0, 0)
suffix = ""
text = "Scale:"
child_items = Array[ExtResource("5_pnncu")]([])
metadata/_custom_type_script = "uid://bhickbq71f38e"

[sub_resource type="Resource" id="Resource_240kv"]
script = ExtResource("8_cgriv")
value = Color(1, 1, 1, 1)
is_transparency_enabled = true
text = "Color tint:"
child_items = Array[ExtResource("5_pnncu")]([])
metadata/_custom_type_script = "uid://b51eyg5h0a7ey"

[sub_resource type="Resource" id="Resource_sdoex"]
script = ExtResource("5_pnncu")
text = "Settings:"
child_items = Array[ExtResource("5_pnncu")]([SubResource("Resource_cgriv"), SubResource("Resource_vljim"), SubResource("Resource_ui7qy"), SubResource("Resource_owm2d"), SubResource("Resource_j6prn"), SubResource("Resource_e5qcx"), SubResource("Resource_240kv")])
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[node name="InterfaceDecorationEdit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w5yw6")

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(96, 32)
layout_mode = 1
offset_right = 64.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("2_ga3my")
text = "<- Back"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
offset_left = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("2_ga3my")
text = "Delete"

[node name="Preview" type="ColorRect" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
grow_horizontal = 2
grow_vertical = 2

[node name="PreviewRect" type="TextureRect" parent="Preview"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(56, 56)
texture = ExtResource("3_kt1sj")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" parent="VBoxContainer" instance=ExtResource("4_04cbk")]
unique_name_in_owner = true
layout_mode = 2
item = SubResource("Resource_sdoex")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
